# ai-dev-tools-zoomcamp-livevibecoding

./: .env.prod.example  .gitignore  .gitleaks.toml  CI_CD.md  CLAUDE.md  DEPLOYMENT.md  DOCKER.md  README.md  ROADMAP.md  TESTING.md  TEST_RESULTS.md  deploy.sh  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  render-blueprint.yaml  render.yaml  run-tests.sh
.github/workflows/: build.yml  ci.yml  deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 6134c4b0bc33_seed_initial_coding_problems.py  eae51518031b_initial_migration_create_all_tables.py
backend/app/: database.py  main.py  websocket.py
backend/app/api/routes/: __init__.py  auth.py  evaluations.py  problems.py  sessions.py  ws.py
backend/app/models/: __init__.py  evaluation.py  problem.py  session.py  user.py
backend/app/schemas/: __init__.py  error.py  evaluation.py  execution.py  problem.py  session.py  user.py  websocket.py
backend/app/services/: __init__.py  evaluations.py  problems.py  sessions.py  users.py
backend/tests/: README.md  conftest.py
backend/tests/test_api/: test_evaluations.py  test_problems.py  test_sessions.py
backend/tests/test_services/: test_evaluations.py  test_problems.py  test_sessions.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  Dockerfile.dev  Dockerfile.render  nginx.conf  nginx.render.conf  package-lock.json  package.json  tailwind.config.js  vitest.config.js
frontend/src/: App.vue  style.css
(+15 files in other folders)
